# ptfc_fcnn

./: CMakeLists.txt  README.md  main.cpp  main.h
Make/Common/: Marefile  ptfc_fcnn.mare
Make/Linux/: Makefile
Make/VS2015/: generate.cmd
Src/: main.cpp  main.h
Util/fcnn/include/fcnn/: dataset.cpp  dataset.h  fcnn.h  fcnncfg.h  level3.cpp  mat.cpp  mat.h  matops.cpp  matops.h  matops_enable.h  mlpnet.cpp  mlpnet.h  mlpnet_prune.cpp  mlpnet_prune.h  mlpnet_teach.cpp  mlpnet_teach.h  rcarr.cpp  rcarr.h  report.cpp  timing.cpp
util/fcnn/: CMakeLists.txt  activation.h  dataset.cpp  dataset.h  export.cpp  export.h  fcnn.h  fcnncfg.h.in  level1.h  level1_impl.h  level2.cpp  level2.h  level3.cpp  level3.h  mat.cpp  mat.h  matops.cpp  matops.h  matops_enable.h  mlpnet.cpp  mlpnet.h  mlpnet_prune.cpp  mlpnet_prune.h  mlpnet_teach.cpp  mlpnet_teach.h  rcarr.cpp  report.cpp  report.h  struct.cpp  struct.h  timing.cpp  timing.h  utils.cpp  utils.h
util/tclap/: CMakeLists.txt
